# pHex

./: .gitignore  .travis.yml  CONTRIBUTING  LICENSE  Makefile.am  NEWS  README.md  configure.ac  main.yml
man/: phex.1
src/: hex.c  main.c  print.c  print.h  string.c  window.c  window.h
tests/: complex.sh  error.sh  longinput.sh  simple.sh
